ghc-4335c07/testsuite/tests/ado/ado003.hs
{-# LANGUAGE ApplicativeDo #-}
module ShouldFail where

g :: IO ()
g = do
  x <- getChar
  'a' <- return (3::Int) -- type error
  return ()
